--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -4,15 +4,14 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'TTNorms-Regular', 'TT Norms', sans-serif;
 }
 
 .central {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
+  @include flex();
+  @include flex-direction(column);
+
+  background-color: $background-content;
 }
 
 a {
@@ -26,4 +25,11 @@ a {
 
 button {
   color: $button-color;
+  background-color: $button-backgroundcolor;
+  font-family: 'TTNorms-Bold', 'TT Norms Bold', 'TT Norms', sans-serif;
+  border: none;
+  padding: 5px 10px;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 14px;
 }
