--- a/assets/styles/var.scss
+++ b/assets/styles/var.scss
@@ -1,1 +1,21 @@
-$button-color: #32135B;
+//brand colors
+$primary-color: #32135B;
+$secondary-color: rgba(47, 241, 137, 1);
+
+$button-color: $primary-color;
+$button-backgroundcolor:$secondary-color;
+$background-content: $primary-color;
+// Progress bar
+// Colors
+$pw-incomplete: $secondary-color !default;
+$pw-complete: $secondary-color !default;
+$pw-active: $secondary-color !default;
+$pw-hover: $secondary-color !default;
+// Sizing
+$pw-bubble-size: 20px !default;
+$pw-bubble-line-thickness: 3px !default;
+$pw-border-thickness: 1px !default;
+$pw-darken-amount: 30% !default;
+
+// Mobile
+$pw-mobile-size: 400px !default;
