--- a/assets/styles/components/footer-component.scss
+++ b/assets/styles/components/footer-component.scss
@@ -1,20 +1,55 @@
 footer {
 
-
+  @include flex();
+  @include flex-direction(column);
   background-color: rgba(208, 208, 208, 1);
   font-family: 'TTNorms-Medium', 'TT Norms Medium', 'TT Norms', sans-serif;
   color: #616161;
 
+  >div {
+    @include flex();
+    @include flex-direction(column);
+
+    @include min-tablet {
+      flex-grow: 1;
+      @include flex-direction(row);
+    }
+
+    @include min-desktop {
+      margin: auto;
+      width: 80%;
+      padding: 20px;
+    }
+
+    div {
+      @include flex();
+      @include flex-direction(column);
+
+      @include min-tablet {
+        flex-grow: 1;
+      }
+    }
+  }
+
   .links {
-    >a {
+
+    @include flex();
+    @include flex-direction(column);
+
+    @include min-tablet {
+      @include flex-direction(row);
+    }
+
+    div>a {
       padding: 10px;
     }
   }
 
-  div {
+  .logo {
     @include flex();
-    @include flex-direction(column);
+    padding: 40px;
   }
+
 
   a {
     @include flex();
