--- a/assets/styles/components/content-component.scss
+++ b/assets/styles/components/content-component.scss
@@ -1,38 +1,20 @@
 .content {
+
+  padding: 15px;
+
   @include flex();
   @include flex-direction(column);
 
   div {
     @include flex();
     @include flex-direction(column);
+    color: #fff;
   }
-
-  padding: 15px;
 
   @include min-desktop {
     margin: auto;
-    width: 50%;
-    padding: 20px;
-  }
-
-  .step-view {
-    .mobile {
-      @include flex();
-
-      @include min-tablet {
-        display: none;
-      }
-
-    }
-
-    .desktop {
-      display: none;
-
-      @include min-tablet {
-        @include flex();
-
-      }
-    }
+    width: 80%;
+    padding: 50px 20px;
   }
 
   .steps {
@@ -44,40 +26,18 @@
 
     @include min-tablet {
 
+      @include flex-direction(row);
+
       div {
-        @include flex-direction(row);
-        width: 40%;
+        &:first-child {
+          padding-right: 30px;
+        }
+
+        flex-grow: 1;
+        padding: 30px 0;
+        justify-content: flex-end;
+
       }
-    }
-  }
-
-  .progress-indicator {
-    @include flex();
-    border-radius: 50%;
-    -webkit-transform: translate(50%, 50%);
-    transform: translate(50%, 50%);
-    width: 100px;
-    height: 100px;
-    background: $secondary-color;
-
-    &.progress-30 {
-      background-image: -webkit-linear-gradient(108deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, $secondary-color 50%, #ddd 50%);
-      background-image: linear-gradient(-18deg, #ddd 50%, transparent 50%), linear-gradient(90deg, $secondary-color 50%, #ddd 50%);
-    }
-
-    &.progress-40 {
-      background-image: -webkit-linear-gradient(144deg, #ddd 50%, transparent 50%), -webkit-linear-gradient(left, $secondary-color 50%, #ddd 50%);
-      background-image: linear-gradient(-54deg, #ddd 50%, transparent 50%), linear-gradient(90deg, $secondary-color 50%, #ddd 50%);
-    }
-
-    .overlay {
-      border-radius: 50%;
-      width: 80px;
-      height: 80px;
-      margin: auto;
-      background: $primary-color;
-      text-align: center;
-      padding-top: 30%;
     }
   }
 
@@ -85,12 +45,21 @@
     @include flex();
     @include flex-direction(row);
 
+    button {
+      width: 60%;
+
+      @include min-desktop {
+        width: 30%;
+      }
+    }
+
     div {
       flex-grow: 1;
-      padding: 40px 20px;
+      padding: 40px 0;
+
 
       &:last-child {
-        text-align: right;
+        align-items: flex-end;
       }
     }
   }
